--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "Timekeeper userscript TypeScript project",
   "scripts": {
     "prebuild": "node -p \"'export const TIMEKEEPER_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
-  "build": "tsc && node scripts/postbuild.js",
+    "build": "npm run prebuild && node scripts/build.js",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "esbuild": "^0.27.2",
     "typescript": "^5.4.0"
   }
 }
