--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timekeeper",
-  "version": "4.1.8",
+  "version": "4.2.0",
   "private": true,
   "description": "Timekeeper userscript TypeScript project",
   "scripts": {
@@ -10,5 +10,8 @@
   "devDependencies": {
     "esbuild": "^0.27.2",
     "typescript": "^5.4.0"
+  },
+  "dependencies": {
+    "fflate": "^0.8.2"
   }
 }
