--- a/.github/workflows/fetch-youtube.yml
+++ b/.github/workflows/fetch-youtube.yml
@@ -4,8 +4,8 @@ name: Fetch YouTube Channel Videos
 on:
   workflow_dispatch: {}
   schedule:
-  # Weekly (UTC) - change or remove as you like
-  - cron: '0 0 * * 0'
+  # Daily at midnight UTC
+  - cron: '0 0 * * *'
 
 jobs:
   fetch:
