use dayjs and add some formatting tests

--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "timekeeper",
-  "version": "4.4.10",
+  "version": "4.4.11",
   "private": true,
   "description": "Timekeeper userscript TypeScript project",
   "scripts": {
     "build": "node scripts/build.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "vitest run"
   },
   "devDependencies": {
     "esbuild": "^0.27.2",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "vitest": "^1.0.0"
   },
   "dependencies": {
-    "fflate": "^0.8.2"
+    "fflate": "^0.8.2",
+    "dayjs": "^1.11.9"
   }
 }
