--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "devDependencies": {
     "esbuild": "^0.27.2",
-    "typescript": "^5.4.0",
-    "vitest": "^1.0.0"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
-    "fflate": "^0.8.2",
-    "dayjs": "^1.11.9"
+    "dayjs": "^1.11.19",
+    "fflate": "^0.8.2"
   }
 }
