use preact and htm for dom templating

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timekeeper",
-  "version": "4.4.18",
+  "version": "4.4.20",
   "private": true,
   "description": "Timekeeper userscript TypeScript project",
   "scripts": {
@@ -10,14 +10,16 @@
   },
   "devDependencies": {
     "esbuild": "^0.27.2",
+    "idb": "^7.1.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.16",
-    "idb": "^7.1.1"
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "dayjs": "^1.11.19",
     "delegate-it": "^6.3.0",
+    "fake-indexeddb": "^6.2.5",
     "fflate": "^0.8.2",
-    "fake-indexeddb": "^6.2.5"
+    "htm": "^3.1.1",
+    "preact": "^10.28.1"
   }
 }
