--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,17 @@
     "module": "ES2020",
     "lib": ["DOM", "ES2020"],
     "moduleResolution": "bundler",
-    "strict": false,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": false,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "noImplicitThis": false,
+    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": true,
     "allowJs": false,
     "baseUrl": "./src",
     "rootDir": "src",
